src/objects/HI001_VisitReport__c.object
<CustomObject>
    <fields>
        <fullName>PYME_lm_MesMayorVenta__c</fullName>
        <description>Meses de Mayor venta del cliente</description>
        <inlineHelpText>Meses de mayor venta del Cliente</inlineHelpText>
        <label>¿Cuáles son los meses con mayor venta?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Meses_del_Anio</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PYME_lm_SectorOperacion__c</fullName>
        <description>Sector al que pertenece la cuenta</description>
        <label>Sector</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Servicios</fullName>
                </value>
                <value>
                    <fullName>Manufactura/Industria</fullName>
                </value>
                <value>
                    <fullName>Comercio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PYME_lm_TipoInstalacion__c</fullName>
        <description>lista que captura el tipo de instalación</description>
        <label>Tipo de Instalación</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Propias</fullName>
                </value>
                <value>
                    <fullName>Rentadas</fullName>
                </value>
                <value>
                    <fullName>Otras</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PYME_ls_CalificacionVisita__c</fullName>
        <description>Calificación de la visita al cliente</description>
        <label>¿Cómo calificarías la visita?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PYME_ls_Calificacion__c</fullName>
        <description>campo que captura la calificación del reporte</description>
        <label>Calificación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PYME_ls_DondeOtrosDomicilios__c</fullName>
        <description>campo que captura donde se encuentran los otros domicilios del cliente</description>
        <label>¿En dónde?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aguascalientes</fullName>
                </value>
                <value>
                    <fullName>Baja California</fullName>
                </value>
                <value>
                    <fullName>Baja California Sur</fullName>
                </value>
                <value>
                    <fullName>Campeche</fullName>
                </value>
                <value>
                    <fullName>Chiapas</fullName>
                </value>
                <value>
                    <fullName>Chihuahua</fullName>
                </value>
                <value>
                    <fullName>Coahuila de Zaragoza</fullName>
                </value>
                <value>
                    <fullName>Colima</fullName>
                </value>
                <value>
                    <fullName>Distrito Federal</fullName>
                </value>
                <value>
                    <fullName>Durango</fullName>
                </value>
                <value>
                    <fullName>Guanajuato</fullName>
                </value>
                <value>
                    <fullName>Guerrero</fullName>
                </value>
                <value>
                    <fullName>Hidalgo</fullName>
                </value>
                <value>
                    <fullName>Jalisco</fullName>
                </value>
                <value>
                    <fullName>Michoacán de Ocampo</fullName>
                </value>
                <value>
                    <fullName>Morelos</fullName>
                </value>
                <value>
                    <fullName>Nayarit</fullName>
                </value>
                <value>
                    <fullName>Nuevo León</fullName>
                </value>
                <value>
                    <fullName>Oaxaca</fullName>
                </value>
                <value>
                    <fullName>Puebla</fullName>
                </value>
                <value>
                    <fullName>Querétaro</fullName>
                </value>
                <value>
                    <fullName>Quintana Roo</fullName>
                </value>
                <value>
                    <fullName>San Luis Potosí</fullName>
                </value>
                <value>
                    <fullName>Sinaloa</fullName>
                </value>
                <value>
                    <fullName>Sonora</fullName>
                </value>
                <value>
                    <fullName>Tabasco</fullName>
                </value>
                <value>
                    <fullName>Tamaulipas</fullName>
                </value>
                <value>
                    <fullName>Tlaxcala</fullName>
                </value>
                <value>
                    <fullName>Veracruz de Ignacio de la Llave</fullName>
                </value>
                <value>
                    <fullName>Yucatán</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PYME_ls_InformacionAdecuada__c</fullName>
        <description>La actividad e información reportada por el entrevistado es adecuada  al giro de la empresa</description>
        <inlineHelpText>La actividad e información reportada por el entrevistado es adecuada  al giro de la empresa</inlineHelpText>
        <label>La información reportada es coherente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PYME_ls_RV__c</fullName>
        <description>campo que captura la calificación del Rv</description>
        <label>Calidad del RV</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bueno</fullName>
                </value>
                <value>
                    <fullName>Excelente</fullName>
                </value>
                <value>
                    <fullName>Malo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PYME_ls_SatisfaccionVisita__c</fullName>
        <description>Puntaje de calificación de la visita</description>
        <label>¿Te gustó la visita?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PYME_ls_TipoDomicilio__c</fullName>
        <description>Tipo de domicilio de la empresa</description>
        <label>Tipo de domicilio</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Comercial</fullName>
                </value>
                <value>
                    <fullName>Habitacional</fullName>
                </value>
                <value>
                    <fullName>Ninguno</fullName>
                    <isActive>false</isActive>
                    <label>Ninguno</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PYME_ls_TipoZona__c</fullName>
        <description>Campo que captura el tipo de zona</description>
        <label>Tipo de Zona</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Urbana</fullName>
                </value>
                <value>
                    <fullName>Semiurbana</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Rural</fullName>
                </value>
                <value>
                    <fullName>Ninguno</fullName>
                    <isActive>false</isActive>
                    <label>Ninguno</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PYME_ls_Tipo_de_administracion__c</fullName>
        <label>Tipo de administración</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Administrador Unico</fullName>
                </value>
                <value>
                    <fullName>Consejo Administrativo</fullName>
                </value>
                <value>
                    <fullName>Familiar</fullName>
                </value>
                <value>
                    <fullName>Profresional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PYME_ls_UsoInmueble__c</fullName>
        <description>Lista que captura el uso de inmueble</description>
        <label>Uso del inmueble</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sucursal</fullName>
                </value>
                <value>
                    <fullName>Bodega</fullName>
                </value>
                <value>
                    <fullName>Fiscal</fullName>
                </value>
                <value>
                    <fullName>Oficina Administrativa</fullName>
                </value>
                <value>
                    <fullName>Fabrica (Operativa)</fullName>
                </value>
                <value>
                    <fullName>Comercial</fullName>
                    <isActive>false</isActive>
                    <label>Comercial</label>
                </value>
                <value>
                    <fullName>Habitacional</fullName>
                    <isActive>false</isActive>
                    <label>Habitacional</label>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                    <isActive>false</isActive>
                    <label>Industrial</label>
                </value>
                <value>
                    <fullName>Ninguno</fullName>
                    <isActive>false</isActive>
                    <label>Ninguno</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PYME_tx_EmpresaProduce__c</fullName>
        <description>Campo que captura  si la empresa produce</description>
        <label>¿La empresa Produce?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PYME_tx_PresenciaOperacion__c</fullName>
        <description>campo que captura la presencia de la operación</description>
        <label>Presencia</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Estatal</fullName>
                </value>
                <value>
                    <fullName>Internacional</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Nacional</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PYME_fm_NoCliente__c</fullName>
        <description>campo que describe el No. del cliente</description>
        <formula>CF001_rb_NombreComercialCliente__r.No_de_cliente__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. de cliente</label>
        <type>Text</type>
    </fields>
    <label>Reporte de Visita</label>
    <listViews>
        <fullName>BPyP_Mis_Reportes_de_Visitas_Anteriores</fullName>
        <columns>NAME</columns>
        <columns>CF001_rb_NombreComercialCliente__c</columns>
        <columns>EG_ft_HoraVisitaLlamada__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EG_ls_ObjetivoVisita__c</columns>
        <columns>EG_ft_ProximaVisitaLlamada__c</columns>
        <columns>CF001_ca_CorreoEnviado__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>EG_ft_HoraVisitaLlamada__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Mis Reportes de Visitas Anteriores</label>
        <sharedTo>
            <role>BBVAADMINISTRADOR</role>
            <roleAndSubordinates>BPYP_DIRECCI_N_GENERAL</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BPyP_Pr_ximas_Visitas_Llamadas</fullName>
        <columns>NAME</columns>
        <columns>CF001_rb_NombreComercialCliente__c</columns>
        <columns>EG_ft_HoraVisitaLlamada__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>EG_ft_HoraVisitaLlamada__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Próximas Visitas/Llamadas</label>
        <sharedTo>
            <role>BBVAADMINISTRADOR</role>
            <roleAndSubordinates>BPYP_DIRECCI_N_GENERAL</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BPyP_vl_ReportesVisitaTodos</fullName>
        <columns>NAME</columns>
        <columns>CF001_rb_NombreComercialCliente__c</columns>
        <columns>EG_ft_HoraVisitaLlamada__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CF001_ca_CorreoEnviado__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos Reportes de Visita</label>
        <sharedTo>
            <roleAndSubordinates>BPYP_DIRECCI_N_GENERAL</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>RV-{0}</displayFormat>
        <label>No. Reporte de Visita</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reportes de Visitas</pluralLabel>
    <recordTypes>
        <fullName>EG_tr_ReporteLlamadaComercialCO</fullName>
        <active>true</active>
        <label>Llamada Comercial CO</label>
    </recordTypes>
    <recordTypes>
        <fullName>EG_tr_ReporteLlamadaComercialED</fullName>
        <active>true</active>
        <label>Llamada Comercial ED</label>
    </recordTypes>
    <recordTypes>
        <fullName>EG_tr_ReporteLlamadaComercialSL</fullName>
        <active>true</active>
        <label>Llamada Comercial</label>
    </recordTypes>
    <recordTypes>
        <fullName>EG_tr_ReporteLlamadaSeguimientoCO</fullName>
        <active>true</active>
        <label>Llamada Seguimiento CO</label>
    </recordTypes>
    <recordTypes>
        <fullName>EG_tr_ReporteLlamadaSeguimientoED</fullName>
        <active>true</active>
        <label>Llamada Seguimiento ED</label>
    </recordTypes>
    <recordTypes>
        <fullName>EG_tr_ReporteLlamadaSeguimientoSL</fullName>
        <active>true</active>
        <label>Llamada Seguimiento</label>
    </recordTypes>
    <recordTypes>
        <fullName>EG_tr_ReporteVisitaEstrategicaCO</fullName>
        <active>true</active>
        <label>Reporte Visita Estrategica CO</label>
    </recordTypes>
    <recordTypes>
        <fullName>EG_tr_ReporteVisitaEstrategicaED</fullName>
        <active>true</active>
        <label>Reporte Visita Estrategica ED</label>
    </recordTypes>
    <recordTypes>
        <fullName>EG_tr_ReporteVisitaEstrategicaSL</fullName>
        <active>true</active>
        <label>Reporte Visita Estratégica</label>
    </recordTypes>
    <recordTypes>
        <fullName>EG_tr_ReporteVisitaSeguimientoCO</fullName>
        <active>true</active>
        <label>Reporte Visita de Seguimiento CO</label>
    </recordTypes>
    <recordTypes>
        <fullName>EG_tr_ReporteVisitaSeguimientoED</fullName>
        <active>true</active>
        <label>Reporte Visita de Seguimiento ED</label>
    </recordTypes>
    <recordTypes>
        <fullName>EG_tr_ReporteVisitaSeguimientoSL</fullName>
        <active>true</active>
        <label>Reporte Visita de Seguimiento</label>
    </recordTypes>
    <recordTypes>
        <fullName>EG_tr_ReporteVisitaComercialCO</fullName>
        <active>true</active>
        <label>Reporte Visita Comercial CO</label>
    </recordTypes>
    <recordTypes>
        <fullName>EG_tr_ReporteVisitaComercialED</fullName>
        <active>true</active>
        <label>Reporte Visita Comercial ED</label>
    </recordTypes>
    <recordTypes>
        <fullName>EG_tr_ReporteVisitaComercialSL</fullName>
        <active>true</active>
        <label>Reporte Visita Comercial</label>
    </recordTypes>
    <recordTypes>
        <fullName>PYME_tre_ComercialSL</fullName>
        <description>Visita comercial de PyME.</description>
        <active>true</active>
        <label>Visita Comercial</label>
    </recordTypes>
    <recordTypes>
        <fullName>PYME_tre_RiesgosED</fullName>
        <description>Reporte de Visita Comercial/Riesgo de PyME.</description>
        <active>true</active>
        <label>Reporte de Visita Comercial/Riesgos</label>
    </recordTypes>
    <recordTypes>
        <fullName>PYME_tre_RV_ComercialED</fullName>
        <description>Visita comercial ED de PyME.</description>
        <active>true</active>
        <label>Visita Comercial ED</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>